add ui into wwwrrot

--- a/pxvuong/src/WebAPI/WebAPI.csproj
+++ b/pxvuong/src/WebAPI/WebAPI.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\index.html" />
+  </ItemGroup>
+
 </Project>
