--- a/pxvuong/src/WebAPI/WebAPI.csproj
+++ b/pxvuong/src/WebAPI/WebAPI.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>a08cfca4-f25f-4513-a860-2cd44a97805d</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
